--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "java.project.referencedLibraries": {
         "include": [
             "lib/**/*.jar",
-            "/Users/cherrie/Documents/ICS3U1b 2023:24/JARs/core.jar"
+            "/Users/cherrie/Documents/ICS3U1b 2023:24/JARs/core.jar",
+            "/Users/liut3514/Desktop/Computer Science/core.jar"
         ],
         "exclude": [
             "lib/repl_core.jar"
